updting images lazyiness links for seo

--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -176,7 +176,7 @@
     <header>
       <div class="container">
         <div class="icon-top-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
         </div>
         <h1 data-text="Kathrin Peled">
           Kathrin Peled <br />
@@ -250,7 +250,7 @@
           </ul>
         </nav>
         <div class="icon-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
         </div>
       </div>
     </header>
@@ -493,7 +493,7 @@
 
           <img
             src="../Language Logos/English_Logo.webp"
-            alt="Change Language to Enlish"
+            alt="Change Language to Enlish" loading="lazy"
           />
         </a>
       </div>
@@ -502,7 +502,7 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - Mein erstes Portfolio</p>
         <div class="logo">
-          <img src="../Icons/Draculady-logo.webp" alt="Draculady code logo" />
+          <img src="../Icons/Draculady-logo.webp" loading="lazy" alt="Draculady code logo" />
         </div>
       </div>
     </footer>
