--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -178,7 +178,7 @@
     <header>
       <div class="container">
         <div class="icon-top-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
         </div>
         <h1 data-text="Kathrin Peled">
           Kathrin Peled <br />
@@ -244,7 +244,7 @@
           </ul>
         </nav>
         <div class="icon-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
         </div>
       </div>
     </header>
@@ -484,7 +484,7 @@
           </p>
 
           <img
-            src="../Language Logos/German_Logo.webp"
+            src="../Language Logos/German_Logo.webp" loading="lazy"
             alt="Change Language to German"
           />
         </a>
@@ -494,7 +494,7 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <img src="../Icons/Draculady-logo.webp" alt="Draculady code logo" />
+          <img src="../Icons/Draculady-logo.webp" loading="lazy" alt="Draculady code logo" />
         </div>
       </div>
     </footer>
