--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -177,7 +177,7 @@
     <header>
       <div class="container">
         <div class="icon-top-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
         </div>
         <h1 data-text="Kathrin Peled">
           Kathrin Peled <br />
@@ -243,7 +243,7 @@
           </ul>
         </nav>
         <div class="icon-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
         </div>
       </div>
     </header>
@@ -331,7 +331,7 @@
             änderen
           </p>
           <img
-            src="../Language Logos/German_Logo.webp"
+            src="../Language Logos/German_Logo.webp" loading="lazy"
             alt="Change Language to German"
           />
         </a>
@@ -361,7 +361,7 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <img src="../Icons/Draculady-logo.webp" alt="Draculady code logo" />
+          <img src="../Icons/Draculady-logo.webp" loading="lazy" alt="Draculady code logo" />
         </div>
       </div>
     </footer>
