--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -177,7 +177,11 @@
     <header>
       <div class="container">
         <div class="icon-top-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
         <h1 data-text="Kathrin Peled">
           Kathrin Peled <br />
@@ -245,7 +249,11 @@
           </ul>
         </nav>
         <div class="icon-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </header>
@@ -555,6 +563,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.1.webp"
+                    loading="lazy"
                     alt="Project 2.1"
                   />
                 </div>
@@ -588,6 +597,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.2.webp"
+                    loading="lazy"
                     alt="Project 2"
                   />
                 </div>
@@ -626,6 +636,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.3.webp"
+                    loading="lazy"
                     alt="Project 3"
                   />
                 </div>
@@ -662,6 +673,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.4.webp"
+                    loading="lazy"
                     alt="Project 4"
                   />
                 </div>
@@ -701,6 +713,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.5.webp"
+                    loading="lazy"
                     alt="Project 5"
                   />
                 </div>
@@ -740,6 +753,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.6.webp"
+                    loading="lazy"
                     alt="Project 6"
                   />
                 </div>
@@ -775,6 +789,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.7.webp"
+                    loading="lazy"
                     alt="Project 7"
                   />
                 </div>
@@ -821,6 +836,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.8.webp"
+                    loading="lazy"
                     alt="Project 8"
                   />
                 </div>
@@ -861,6 +877,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.9.webp"
+                    loading="lazy"
                     alt="Project 9"
                   />
                 </div>
@@ -970,6 +987,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_1.webp"
+                    loading="lazy"
                     alt="Project 1"
                   />
                 </div>
@@ -1005,6 +1023,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.webp"
+                    loading="lazy"
                     alt="Project 2"
                   />
                 </div>
@@ -1038,6 +1057,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_3.webp"
+                    loading="lazy"
                     alt="Project 3"
                   />
                 </div>
@@ -1077,6 +1097,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_4.webp"
+                    loading="lazy"
                     alt="Project 4"
                   />
                 </div>
@@ -1107,6 +1128,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_5.webp"
+                    loading="lazy"
                     alt="Project 5"
                   />
                 </div>
@@ -1142,6 +1164,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_6.webp"
+                    loading="lazy"
                     alt="Project 6"
                   />
                 </div>
@@ -1172,6 +1195,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_7.webp"
+                    loading="lazy"
                     alt="Project 7"
                   />
                 </div>
@@ -1199,6 +1223,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_8.webp"
+                    loading="lazy"
                     alt="Project 8"
                   />
                 </div>
@@ -1231,6 +1256,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_9.webp"
+                    loading="lazy"
                     alt="Project 9"
                   />
                 </div>
@@ -1256,6 +1282,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_10.webp"
+                    loading="lazy"
                     alt="Project 10"
                   />
                 </div>
@@ -1283,6 +1310,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_11.webp"
+                    loading="lazy"
                     alt="Project 11"
                   />
                 </div>
@@ -1317,6 +1345,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_12.webp"
+                    loading="lazy"
                     alt="Project 12"
                   />
                 </div>
@@ -1361,6 +1390,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_13.webp"
+                    loading="lazy"
                     alt="Project 13"
                   />
                 </div>
@@ -1386,6 +1416,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_14.webp"
+                    loading="lazy"
                     alt="Project 14"
                   />
                 </div>
@@ -1413,6 +1444,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_15.webp"
+                    loading="lazy"
                     alt="Project 15"
                   />
                 </div>
@@ -1439,6 +1471,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_16.webp"
+                    loading="lazy"
                     alt="Project 16"
                   />
                 </div>
@@ -1467,6 +1500,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_17.webp"
+                    loading="lazy"
                     alt="Project 17"
                   />
                 </div>
@@ -1494,6 +1528,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_18.webp"
+                    loading="lazy"
                     alt="Project 18"
                   />
                 </div>
@@ -1526,6 +1561,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_19.webp"
+                    loading="lazy"
                     alt="Project 19"
                   />
                 </div>
@@ -1551,6 +1587,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_20.webp"
+                    loading="lazy"
                     alt="Project 20"
                   />
                 </div>
@@ -1579,6 +1616,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_21.webp"
+                    loading="lazy"
                     alt="Project 21"
                   />
                 </div>
@@ -1614,6 +1652,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_22.webp"
+                    loading="lazy"
                     alt="Project 22"
                   />
                 </div>
@@ -1644,6 +1683,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_23.webp"
+                    loading="lazy"
                     alt="Project 23"
                   />
                 </div>
@@ -1679,6 +1719,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_24.webp"
+                    loading="lazy"
                     alt="Project 24"
                   />
                 </div>
@@ -1745,6 +1786,7 @@
 
           <img
             src="../Language Logos/German_Logo.webp"
+            loading="lazy"
             alt="Change Language to German"
           />
         </a>
@@ -1754,7 +1796,11 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <img src="../Icons/Draculady-logo.webp" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-logo.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </footer>
