--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -179,7 +179,11 @@
     <header>
       <div class="container">
         <div class="icon-top-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
         <h1 data-text="Kathrin Peled">
           Kathrin Peled <br />
@@ -249,7 +253,11 @@
           </ul>
         </nav>
         <div class="icon-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </header>
@@ -564,6 +572,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.1.webp"
+                    loading="lazy"
                     alt="Projekt 2.1"
                   />
                 </div>
@@ -598,6 +607,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.2.webp"
+                    loading="lazy"
                     alt="Projekt 2"
                   />
                 </div>
@@ -636,6 +646,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.3.webp"
+                    loading="lazy"
                     alt="Projekt 3"
                   />
                 </div>
@@ -672,6 +683,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.4.webp"
+                    loading="lazy"
                     alt="Projekt 4"
                   />
                 </div>
@@ -711,6 +723,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.5.webp"
+                    loading="lazy"
                     alt="Projekt 5"
                   />
                 </div>
@@ -751,6 +764,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.6.webp"
+                    loading="lazy"
                     alt="Projekt 6"
                   />
                 </div>
@@ -786,6 +800,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.7.webp"
+                    loading="lazy"
                     alt="Projekt 7"
                   />
                 </div>
@@ -833,6 +848,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.8.webp"
+                    loading="lazy"
                     alt="Projekt 8"
                   />
                 </div>
@@ -874,6 +890,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.9.webp"
+                    loading="lazy"
                     alt="Projekt 9"
                   />
                 </div>
@@ -986,6 +1003,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_1.webp"
+                    loading="lazy"
                     alt="Project 1"
                   />
                 </div>
@@ -1021,6 +1039,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.webp"
+                    loading="lazy"
                     alt="Project 2"
                   />
                 </div>
@@ -1054,6 +1073,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_3.webp"
+                    loading="lazy"
                     alt="Project 3"
                   />
                 </div>
@@ -1094,6 +1114,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_4.webp"
+                    loading="lazy"
                     alt="Project 4"
                   />
                 </div>
@@ -1124,6 +1145,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_5.webp"
+                    loading="lazy"
                     alt="Project 5"
                   />
                 </div>
@@ -1159,6 +1181,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_6.webp"
+                    loading="lazy"
                     alt="Project 6"
                   />
                 </div>
@@ -1189,6 +1212,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_7.webp"
+                    loading="lazy"
                     alt="Project 7"
                   />
                 </div>
@@ -1216,6 +1240,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_8.webp"
+                    loading="lazy"
                     alt="Project 8"
                   />
                 </div>
@@ -1250,6 +1275,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_9.webp"
+                    loading="lazy"
                     alt="Project 9"
                   />
                 </div>
@@ -1275,6 +1301,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_10.webp"
+                    loading="lazy"
                     alt="Project 10"
                   />
                 </div>
@@ -1302,6 +1329,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_11.webp"
+                    loading="lazy"
                     alt="Project 11"
                   />
                 </div>
@@ -1337,6 +1365,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_12.webp"
+                    loading="lazy"
                     alt="Project 12"
                   />
                 </div>
@@ -1385,6 +1414,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_13.webp"
+                    loading="lazy"
                     alt="Project 13"
                   />
                 </div>
@@ -1410,6 +1440,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_14.webp"
+                    loading="lazy"
                     alt="Project 14"
                   />
                 </div>
@@ -1437,6 +1468,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_15.webp"
+                    loading="lazy"
                     alt="Project 15"
                   />
                 </div>
@@ -1465,6 +1497,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_16.webp"
+                    loading="lazy"
                     alt="Project 16"
                   />
                 </div>
@@ -1493,6 +1526,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_17.webp"
+                    loading="lazy"
                     alt="Project 17"
                   />
                 </div>
@@ -1522,6 +1556,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_18.webp"
+                    loading="lazy"
                     alt="Project 18"
                   />
                 </div>
@@ -1554,6 +1589,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_19.webp"
+                    loading="lazy"
                     alt="Project 19"
                   />
                 </div>
@@ -1579,6 +1615,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_20.webp"
+                    loading="lazy"
                     alt="Project 20"
                   />
                 </div>
@@ -1607,6 +1644,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_21.webp"
+                    loading="lazy"
                     alt="Project 21"
                   />
                 </div>
@@ -1642,6 +1680,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_22.webp"
+                    loading="lazy"
                     alt="Project 22"
                   />
                 </div>
@@ -1673,6 +1712,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_23.webp"
+                    loading="lazy"
                     alt="Project 23"
                   />
                 </div>
@@ -1708,6 +1748,7 @@
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_24.webp"
+                    loading="lazy"
                     alt="Project 24"
                   />
                 </div>
@@ -1774,6 +1815,7 @@
 
           <img
             src="../Language Logos/English_Logo.webp"
+            loading="lazy"
             alt="Sprache auf Englisch ändern"
           />
         </a>
@@ -1783,7 +1825,11 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - Mein erstes Portfolio</p>
         <div class="logo">
-          <img src="../Icons/Draculady-logo.webp" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-logo.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </footer>
