--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -173,7 +173,7 @@
     <header>
       <div class="container">
         <div class="icon-top-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
         </div>
         <h1 data-text="Kathrin Peled">
           Kathrin Peled <br />
@@ -239,7 +239,7 @@
           </ul>
         </nav>
         <div class="icon-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
         </div>
       </div>
     </header>
@@ -252,7 +252,7 @@
           <div class="book-page page-left">
             <div class="profile-page">
               <img
-                src="../Pictures/Profile_Picture-blackNwhite.webp"
+                src="../Pictures/Profile_Picture-blackNwhite.webp" loading="lazy"
                 alt="Kathrin Peled's profile picture"
               />
               <h1>Kathrin Peled</h1>
@@ -907,7 +907,7 @@
             änderen
           </p>
           <img
-            src="../Language Logos/German_Logo.webp"
+            src="../Language Logos/German_Logo.webp" loading="lazy"
             alt="Change Language to German"
           />
         </a>
@@ -917,7 +917,7 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <img src="../Icons/Draculady-logo.webp" alt="Draculady code logo" />
+          <img src="../Icons/Draculady-logo.webp" loading="lazy" alt="Draculady code logo" />
         </div>
       </div>
     </footer>
