--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -173,7 +173,7 @@
     <header>
       <div class="container">
         <div class="icon-top-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
         </div>
         <h1 data-text="Kathrin Peled">
           Kathrin Peled <br />
@@ -245,7 +245,7 @@
           </ul>
         </nav>
         <div class="icon-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
         </div>
       </div>
     </header>
@@ -259,7 +259,7 @@
             <div class="profile-page">
               <img
                 src="../Pictures/Profile_Picture-blackNwhite.webp"
-                alt="Kathrin Peled's profile picture"
+                alt="Kathrin Peled's profile picture" loading="lazy"
               />
               <h1>Kathrin Peled</h1>
               <h2 id="profession-title">Web Entwicklerin</h2>
@@ -916,7 +916,7 @@
             änderen
           </p>
           <img
-            src="../Language Logos/English_Logo.webp"
+            src="../Language Logos/English_Logo.webp" loading="lazy"
             alt="Change Language to German"
           />
         </a>
@@ -926,7 +926,7 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <img src="../Icons/Draculady-logo.webp" alt="Draculady code logo" />
+          <img src="../Icons/Draculady-logo.webp" loading="lazy" alt="Draculady code logo" />
         </div>
       </div>
     </footer>
