--- a/Pages/resume-mobile-english.html
+++ b/Pages/resume-mobile-english.html
@@ -173,7 +173,11 @@
     <header>
       <div class="container">
         <div class="icon-top-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
         <h1 data-text="Kathrin Peled">
           Kathrin Peled <br />
@@ -239,7 +243,11 @@
           </ul>
         </nav>
         <div class="icon-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </header>
@@ -251,6 +259,7 @@
             <img
               src="../Pictures/Profile_Picture-blackNwhite.webp"
               alt="Kathrin Peled's profile picture"
+              loading="lazy"
             />
             <h1>Kathrin Peled</h1>
             <h2 id="profession-title">Web Developer</h2>
@@ -816,6 +825,7 @@
           <img
             src="../Language Logos/German_Logo.webp"
             alt="Change Language to German"
+            loading="lazy"
           />
         </a>
       </div>
@@ -830,7 +840,11 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <img src="../Icons/Draculady-logo.webp" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-logo.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </footer>
