--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -173,7 +173,11 @@
     <header>
       <div class="container">
         <div class="icon-top-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
         <h1 data-text="Kathrin Peled">
           Kathrin Peled <br />
@@ -245,7 +249,11 @@
           </ul>
         </nav>
         <div class="icon-draculady">
-          <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </header>
@@ -257,6 +265,7 @@
             <img
               src="../Pictures/Profile_Picture-blackNwhite.webp"
               alt="Kathrin Peled's profile picture"
+              loading="lazy"
             />
             <h1>Kathrin Peled</h1>
             <h2 id="profession-title">Web Entwicklerin</h2>
@@ -832,6 +841,7 @@
           <img
             src="../Language Logos/English_Logo.webp"
             alt="Change Language to Englisch"
+            loading="lazy"
           />
         </a>
       </div>
@@ -846,7 +856,11 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <img src="../Icons/Draculady-logo.webp" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-logo.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </footer>
