--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-     <!-- Link to the Schema.js file -->
-     <script src="Scripts/schema.js" defer></script>
+    <!-- Link to the Schema.js file -->
+    <script src="Scripts/schema.js" defer></script>
     <title id="index-english">Kathrin Peled's Portfolio - Homepage</title>
     <link
       rel="icon"
@@ -177,6 +177,7 @@
           <img
             src="./Icons/Draculady-icon.webp"
             alt="Draculady code logo for mobile"
+            loading="lazy"
           />
         </div>
         <h1 data-text="Kathrin Peled">
@@ -248,7 +249,11 @@
           </ul>
         </nav>
         <div class="icon-draculady">
-          <img src="./Icons/Draculady-icon.webp" alt="Draculady code logo" />
+          <img
+            src="./Icons/Draculady-icon.webp"
+            alt="Draculady code logo"
+            loading="lazy"
+          />
         </div>
       </div>
     </header>
@@ -262,6 +267,7 @@
             <img
               src="./Pictures/Profile_Picture.webp"
               alt="Portrait of Kathrin Peled"
+              loading="lazy"
             />
           </div>
           <div class="paragraph-div intro-paragraph">
@@ -269,6 +275,7 @@
               <img
                 src="./Pictures/Graduation_Technion.webp"
                 alt="Technion Graduation"
+                loading="lazy"
               />
             </div>
             <p>
@@ -313,6 +320,7 @@
               <img
                 src="./Pictures/Graduaion_Technion_2.webp"
                 alt="Technion Graduation Diplom"
+                loading="lazy"
               />
             </div>
           </div>
@@ -333,6 +341,7 @@
                   <img
                     src="./Projects screenshots/Crazy-Cow-Project.webp"
                     alt="Project 1 Crazy Cow Project"
+                    loading="lazy"
                   />
                   <div class="carousel-item-info">
                     <a
@@ -353,6 +362,7 @@
                   <img
                     src="./Projects screenshots/Animal-World-Project.webp"
                     alt="Project 2 Animal World Tamaguchi JavaScript"
+                    loading="lazy"
                   />
                   <div class="carousel-item-info">
                     <a
@@ -373,6 +383,7 @@
                   <img
                     src="./Projects screenshots/Uriya-Private-Teacher-Project.webp"
                     alt="Project 3 Private Teacher freelance website Uriya Peled"
+                    loading="lazy"
                   />
                   <div class="carousel-item-info">
                     <a
@@ -393,6 +404,7 @@
                   <img
                     src="./Projects screenshots/Pokemon-Project.webp"
                     alt="Project 4 Pokemon Search information with API"
+                    loading="lazy"
                   />
                   <div class="carousel-item-info">
                     <a
@@ -438,6 +450,7 @@
                   aria-label="Whitney Houston Tribute Website"
                   ><img
                     src="./Projects screenshots/Project_3.webp"
+                    loading="lazy"
                     alt="Project 3" /></a
               ></span>
 
@@ -448,6 +461,7 @@
                   aria-label="Forms single page project"
                   ><img
                     src="./Projects screenshots/Project_4.webp"
+                    loading="lazy"
                     alt="Project 4" /></a
               ></span>
 
@@ -458,6 +472,7 @@
                   aria-label="Bootstrap single page project"
                   ><img
                     src="./Projects screenshots/Project_12.webp"
+                    loading="lazy"
                     alt="Project 12" /></a
               ></span>
 
@@ -468,6 +483,7 @@
                   aria-label="Pet rats blog project"
                   ><img
                     src="./Projects screenshots/Project_13.webp"
+                    loading="lazy"
                     alt="Project 13" /></a
               ></span>
 
@@ -478,6 +494,7 @@
                   aria-label="Log in form single page project"
                   ><img
                     src="./Projects screenshots/Project_19.webp"
+                    loading="lazy"
                     alt="Project 19" /></a
               ></span>
 
@@ -488,6 +505,7 @@
                   aria-label="Visit card blur effect single page project"
                   ><img
                     src="./Projects screenshots/Project_22.webp"
+                    loading="lazy"
                     alt="Project 22" /></a
               ></span>
 
@@ -498,6 +516,7 @@
                   aria-label="responsive text and links single page project"
                   ><img
                     src="./Projects screenshots/Project_23.webp"
+                    loading="lazy"
                     alt="Project 23" /></a
               ></span>
 
@@ -508,6 +527,7 @@
                   aria-label="Sweet spot responsive single page project"
                   ><img
                     src="./Projects screenshots/Project_24.webp"
+                    loading="lazy"
                     alt="Project 24" /></a
               ></span>
             </div>
@@ -678,6 +698,7 @@
           </p>
           <img
             src="./Language Logos/German_Logo.webp"
+            loading="lazy"
             alt="Change Language to German"
           />
         </a>
@@ -687,7 +708,11 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <img src="./Icons/Draculady-logo.webp" alt="Draculady code logo" />
+          <img
+            src="./Icons/Draculady-logo.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </footer>
